# ChangeLog for dev-vcs/gitflow
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Sep 2011; James Rowe <jnrowe@gmail.com> gitflow-0.4.1.ebuild:
  Switched to EAPI 4.

  31 May 2011; James Rowe <jnrowe@gmail.com> gitflow-0.4.1.ebuild:
  Switched to jnrowe-github eclass.

  21 Mar 2011; James Rowe <jnrowe@gmail.com> -gitflow-0.4-r1.ebuild,
  gitflow-0.4.1.ebuild:
  Keyworded x86.

  21 Mar 2011; James Rowe <jnrowe@gmail.com> gitflow-0.4.1.ebuild:
  Keyworded amd64.

*gitflow-0.4.1 (15 Feb 2011)

  15 Feb 2011; James Rowe <jnrowe@gmail.com> +gitflow-0.4.1.ebuild:
  Version bump [279].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  10 Dec 2010; James Rowe <jnrowe@gmail.com> -gitflow-0.4.ebuild,
  gitflow-0.4-r1.ebuild:
  Keyworded x86.

  10 Dec 2010; James Rowe <jnrowe@gmail.com> gitflow-0.4-r1.ebuild:
  Keyworded amd64.

  01 Dec 2010; James Rowe <jnrowe@gmail.com> -gitflow-0.3.ebuild,
  gitflow-0.4.ebuild:
  Keyworded x86.

  30 Nov 2010; James Rowe <jnrowe@gmail.com> gitflow-0.4.ebuild:
  Keyworded amd64.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> gitflow-0.3.ebuild,
  gitflow-0.4.ebuild, gitflow-0.4-r1.ebuild, metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

*gitflow-0.4-r1 (07 Nov 2010)

  07 Nov 2010; James Rowe <jnrowe@gmail.com> +gitflow-0.4-r1.ebuild:
  Add bash/zsh completion support [216].

*gitflow-0.4 (30 Oct 2010)

  30 Oct 2010; James Rowe <jnrowe@gmail.com> +gitflow-0.4.ebuild:
  Version bump [209].

  01 Sep 2010; James Rowe <jnrowe@gmail.com> -gitflow-0.2.1.ebuild,
  -files/gitflow-0.2.1-path_fixes.patch, gitflow-0.3.ebuild:
  Keyworded x86.

  01 Sep 2010; James Rowe <jnrowe@gmail.com> gitflow-0.3.ebuild:
  Keyworded amd64.

*gitflow-0.3 (02 Aug 2010)

  02 Aug 2010; James Rowe <jnrowe@gmail.com> +gitflow-0.3.ebuild,
  +files/gitflow-0.3-path_fixes.patch:
  Version bump [5e4].
