@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gitflow-0.4.1-r1 (10 Sep 2011)
+
+  10 Sep 2011; James Rowe <jnrowe@gmail.com> +gitflow-0.4.1-r1.ebuild:
+  Switched to bash-completion-r1 eclass.
+
   06 Sep 2011; James Rowe <jnrowe@gmail.com> gitflow-0.4.1.ebuild:
   Switched to EAPI 4.
 
